I am correcting the collapse v.2

--- a/style.css
+++ b/style.css
@@ -826,7 +826,7 @@ td + td {
   .wrap {
     overflow: hidden;
     position: relative;
-    width: 375px;
+    width: 105%;
   }
   .main {
     min-height: 812px;
